# chatZ

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  join_general_fix.js  vetkeys_demo.md
src/chat_z_backend/: Cargo.toml  chat_z_backend.did
src/chat_z_backend/src/: lib.rs  state.rs  tests.rs
src/chat_z_backend/static/: index.html
src/chat_z_backend/static/assets/: index-BMtKkftz.js  index-oI3XD1J3.js  index-ywUKcnCu.css
src/chat_z_frontend/: index.html  package-lock.json  package.json  vite.config.js
src/chat_z_frontend/src/: App.jsx  index.css  main.jsx
src/chat_z_frontend/src/components/: ChannelList.jsx  ChatRoom.jsx  CreateChannelForm.jsx  EncryptedMessageDisplay.jsx  EncryptedMessageDisplay.jsx.bak  Header.jsx  LoginPage.jsx  MessageDisplay.jsx  MessageDisplay.jsx.bak  PasswordModal.jsx  PaymentTest.jsx  UserProfile.jsx
src/chat_z_frontend/src/hooks/: Auth.jsx  ChatProvider.jsx  TextArea.jsx
src/chat_z_frontend/src/ic/chat_z/: index.js
src/chat_z_frontend/src/lib/: types.js
src/chat_z_frontend/src/services/: paymentService.js
src/declarations/chat_z_backend/: chat_z_backend.did  chat_z_backend.did.d.ts  chat_z_backend.did.js  index.d.ts  index.js
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: ChatInterface.jsx  Landing.jsx  UserRegistration.jsx
src/frontend/src/hooks/: Auth.jsx  Chat.jsx
src/frontend/src/ic/chat_z_backend/: index.did.js  index.js
