[package]
name = "chat_z_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-cdk-timers = "0.10"
ic-stable-structures = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
