[package]
name = "chat_z_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.18"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.108"
sha2 = "0.10"
hex = "0.4.3"
base64 = "0.22"
anyhow = "1.0.75"
ic-types = "0.7.0"
ic-management-canister-types = "0.3"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
